# MLBrickBreaker

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SConstruct  project.godot
config/: NeatParams.ne  startgenes
sound/: mixkit-game-ball-tap-2073.wav.import
src/: CMakeLists.txt  Game.gdns  Game.tscn  GameControlPanel.gd  GameControlPanel.tscn  Globals.gdns  MainMenu.gd  MainMenu.tscn  globals.gd
src/logic/: AITrainer.cpp  AITrainer.h  Definitions.h  Game.cpp  Game.h  GameElements.h  Globals.cpp  Globals.h  Input.cpp  Input.h  Match.cpp  Match.h  NodeHolder.h  game.cpp  game.gdns  game.h  gdlibrary.cpp
src/visuals/: Ball.tscn  Brick.tscn  GhostBall.tscn  GhostPaddle.tscn  Paddle.tscn
textures/: Ball.png.import  Paddle.png.import  background.jpg.import
